--- a/FoodCollector/he-IL.lproj/Main.strings
+++ b/FoodCollector/he-IL.lproj/Main.strings
@@ -38,7 +38,7 @@
 "B0i-6h-JMO.text" = "Build";
 
 /* Class = "UILabel"; text = "Send Message"; ObjectID = "BTK-vj-Jbf"; */
-"BTK-vj-Jbf.text" = "שלחיחת הודעה";
+"BTK-vj-Jbf.text" = "שליחת הודעה";
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "Cq5-xF-fVk"; */
 "Cq5-xF-fVk.text" = "Label";
