--- a/FoodCollector/he-IL.lproj/FCPublishAddressEditorMyLocationCustomCell.strings
+++ b/FoodCollector/he-IL.lproj/FCPublishAddressEditorMyLocationCustomCell.strings
@@ -1,3 +1,3 @@
-
 /* Class = "UILabel"; text = "Current location"; ObjectID = "okz-8U-Qoa"; */
-"okz-8U-Qoa.text" = "Current location";
+"okz-8U-Qoa.text" = "מיקום נוכחי";
+
