--- a/FoodCollector/he-IL.lproj/PublicationEditorTVCPhoneNumEditorCustomCell.strings
+++ b/FoodCollector/he-IL.lproj/PublicationEditorTVCPhoneNumEditorCustomCell.strings
@@ -1,3 +1,3 @@
-
 /* Class = "UITextField"; placeholder = "What's your phone number?"; ObjectID = "IMh-CF-HQE"; */
-"IMh-CF-HQE.placeholder" = "What's your phone number?";
+"IMh-CF-HQE.placeholder" = "מה מספר הטלפון?";
+
