--- a/FoodCollector/he-IL.lproj/Main.strings
+++ b/FoodCollector/he-IL.lproj/Main.strings
@@ -104,7 +104,7 @@
 "aup-wQ-Bfq.normalTitle" = "לאסוף מזון";
 
 /* Class = "UILabel"; text = "en route"; ObjectID = "bAZ-p9-2DG"; */
-"bAZ-p9-2DG.text" = "בדרך";
+"bAZ-p9-2DG.text" = "בדרך לאסוף";
 
 /* Class = "UINavigationItem"; title = "My Shares"; ObjectID = "bjZ-lv-Ao0"; */
 "bjZ-lv-Ao0.title" = "השיתופים שלי";
