Most of the code is done. Need to finish after merge into master.

--- a/FoodCollector/he-IL.lproj/Localizable.strings
+++ b/FoodCollector/he-IL.lproj/Localizable.strings
@@ -135,7 +135,7 @@ What would you like to share?" = "הי,מה תרצו לשתף?";
 "Navigate with:" = "נווט בעזרת:";
 
 /* Title of the message banner meaning that a new event has started nearby */
-"New Event Near you" = "שיתוף חדש בקירבתך";
+"New Event Near You" = "שיתוף חדש בקירבתך";
 
 /* Title for a notification */
 "New Event Update" = "התקבל דיווח חדש עבור";
