--- a/FoodCollector/de.lproj/FCPublishAddressEditorAddressHistoryCustomHeaderView.strings
+++ b/FoodCollector/de.lproj/FCPublishAddressEditorAddressHistoryCustomHeaderView.strings
@@ -1,3 +1,3 @@
-
 /* Class = "UILabel"; text = "Prevues Searches"; ObjectID = "yiO-IL-vCM"; */
-"yiO-IL-vCM.text" = "Prevues Searches";
+"yiO-IL-vCM.text" = "vorherige Suchanfragen";
+
