fixed a typo in "Adress Selector" -> "Address Selector" and translated into Hebrew.

--- a/FoodCollector/de.lproj/Main.strings
+++ b/FoodCollector/de.lproj/Main.strings
@@ -127,7 +127,7 @@
 /* Class = "UIBarButtonItem"; title = "Back"; ObjectID = "fqk-Lk-drl"; */
 "fqk-Lk-drl.title" = "zurück";
 
-/* Class = "UIViewController"; title = "Adress Selector"; ObjectID = "hdu-mN-4y2"; */
+/* Class = "UIViewController"; title = "Address Selector"; ObjectID = "hdu-mN-4y2"; */
 "hdu-mN-4y2.title" = "";
 
 /* Class = "UITabBarItem"; title = "Share"; ObjectID = "ho0-XI-XhJ"; */
