--- a/FoodCollector/de.lproj/FCPublishAddressEditorMyLocationCustomCell.strings
+++ b/FoodCollector/de.lproj/FCPublishAddressEditorMyLocationCustomCell.strings
@@ -1,3 +1,3 @@
 /* Class = "UILabel"; text = "Current location"; ObjectID = "okz-8U-Qoa"; */
-"okz-8U-Qoa.text" = "aktueller Standort";
+"okz-8U-Qoa.text" = "Aktueller Ort";
 
