Fixed info pop over not displaying localized text (this is a bug in iOS).

--- a/FoodCollector/he-IL.lproj/Localizable.strings
+++ b/FoodCollector/he-IL.lproj/Localizable.strings
@@ -211,6 +211,9 @@ What would you like to share?" = "הי,מה תרצו לשתף?";
 /* Report title for a button */
 "Report" = "דווח";
 
+/* A small pop up information message that informs the user why we ask for his phone number */
+"Required for creating groups and finding friends. Your number is confidential and we will never expose it." = "נדרש עבור יצירת קבוצות ואיתור חברים.\nהמספר שלך סודי ואנו לעולם לא נחשוף אותו.";
+
 /* Search bar placeholder text */
 "Search" = "חיפוש";
 
