“Remove Event” was translated in two different ways: “הסרת פרסום” and “הסרת שיתוף”. Now it's “הסרת שיתוף”.

--- a/FoodCollector/he-IL.lproj/NewReportMessageView.strings
+++ b/FoodCollector/he-IL.lproj/NewReportMessageView.strings
@@ -1,5 +1,5 @@
 /* Class = "UIButton"; normalTitle = "Remove Event"; ObjectID = "QY9-Fb-u4C"; */
-"QY9-Fb-u4C.normalTitle" = "הסרת פרסום";
+"QY9-Fb-u4C.normalTitle" = "הסרת שיתוף";
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "hOC-iL-5zf"; */
 "hOC-iL-5zf.text" = "Label";
