--- a/FoodCollector/he-IL.lproj/InfoPlist.strings
+++ b/FoodCollector/he-IL.lproj/InfoPlist.strings
@@ -1,9 +1,9 @@
 /* (No Commment) */
-"CFBundleDisplayName" = "FDN Dev";
+"CFBundleDisplayName" = "Foodonet";
 
 /* (No Commment) */
-"CFBundleName" = "dev.$(PRODUCT_NAME)";
+"CFBundleName" = "$(PRODUCT_NAME)";
 
 /* (No Commment) */
-"CFBundleShortVersionString" = "1.0.8";
+"CFBundleShortVersionString" = "1.0.9";
 
